# TicTacToe-Solver

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Solver.h
src/: Board.cpp  Main.cpp  Solver.cpp
